# AI-forum

./: .env.dev  .env.example  .env.local  .flake8  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.postgres  Makefile  README-colima.md  README-pyenv.md  README.dev.md  README.md  alembic.ini  concept.md  create_demo_categories.py  debug_rag.py  dev.sh  diagnostic_commands.md  docker-compose-full.yml  docker-compose.dev.yml  docker-compose.yml  final_test.py  implementation_roadmap.md  improved_database_schema.sql  pyproject.toml  requirements-shared-models.txt  requirements.txt  requirements_pip.txt  run.py  run_celery.py  setup.sh  test_extended_parsing.py  test_pgvector.py  test_rag_manager.py
ai_manager/: .dockerignore  Dockerfile  README.md  pyproject.toml
ai_manager/api/: main.py
ai_manager/docker/: entrypoint.sh
app/: admin_api.py  admin_web.py  api.py  celery_config.py  celery_tasks.py  config.py  crud.py  database.py  main.py  schemas.py  template_filters.py  templates_config.py  web.py
app/ai_manager/: enhanced_rag_manager.py  forum_manager.py  rag_langchain.py
app/ai_manager/forum_knowledge_base/: alaev.json  users.json
app/managers/: ai_manager.py  db_manager.py
app/models/: __init__.py  models.py  pydantic_models.py  schemas.py  task_model.py
app/schemas/: categories.py
app/templates/: base.html  create_topic.html  index.html  topic.html
app/templates/admin/: ai_messages.html  base.html  categories_create.html  categories_list.html  dashboard.html  messages_edit.html  messages_list.html  subcategories_create.html  subcategories_list.html  tasks_edit.html  tasks_list.html  topics_create.html  topics_edit.html  topics_list.html  users_create.html  users_edit.html  users_list.html
app/urls/: admin_url.py  admin_web_url.py  api_url.py  api_url_ai.py  web_url.py
app/utils/: embedding_manager.py  json_converter.py  monitoring.py
docker/: init-pgvector.sql
docker/postgres_db/.docker-containers/postgres/: Dockerfile  configure.sh
docker_old/: init-db.sql
forum_cache/: rag_metadata.json
migrations/: env.py
migrations/versions/: 5fc867fd5592_alter_context_table.py  733f2e652a48_add_user_relationships_to_topics_and_.py  79d561dfb7bc_create_context_table.py  961b1c95931c_add_user_id_to_topics_and_messages_.py  c9c6ef8ff76b_create_topics_and_messages_tables.py  cc3d59ddff31_create_topics_and_messages_tables.py
rag_manager/: pyproject.toml
rag_manager/app/: config.py  database.py  main.py  models.py  schemas.py
rag_manager/app/api/: routes.py
rag_manager/app/services/: knowledge_service.py
rag_manager/forum_knowledge_base/: alaev.json
tests/: __init__.py  test_api.py
