[tool.poetry]
name = "ai-forum"
version = "0.1.1"
description = "Простой форум на FastAPI с PostgreSQL"
authors = ["Viachaslau Kazakou <sly.kazakoff@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.9"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
pydantic = {extras = ["email"], version = "^2.11.7"}
# shared-models = {git = "https://github.com/ViachaslauKazakou/shared-models.git", tag = "v1.0.2"}
click = "!=8.2.2"
bleach = "^6.1.0"
markdown = "^3.6"
celery = "^5.3.0"
kombu = "^5.3.0"
sqlalchemy-utils = "^0.41.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
