[tool.poetry]
name = "ai-manager"
version = "1.0.0"
description = "AI Manager для форума с поддержкой Ollama"
authors = ["AI Forum Team"]
readme = "README.md"
packages = [{include = "ai_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
httpx = "^0.27.0"
aiohttp = "^3.9.1"
aiofiles = "^23.2.0"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
jinja2 = "^3.1.2"
ollama = "^0.2.1"
openai = "^1.3.7"
tiktoken = "^0.5.2"
numpy = "^1.25.2"
pandas = "^2.1.4"
prometheus-client = "^0.19.0"
structlog = "^23.2.0"
rich = "^13.7.0"
typer = "^0.9.0"
click = "^8.1.7"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
email-validator = "^2.1.0"
cachetools = "^5.3.2"
tenacity = "^8.2.3"
backoff = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[tool.poetry.scripts]
ai-manager = "ai_manager.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["ai_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=ai_manager",
    "--cov-report=term-missing"
]
